# 3d-game-engine

./: CMakeLists.txt  README.md
Engine/: core.cpp  core.h  window.cpp  window.h
Game/: Application.cpp  Application.h  ComponentMap.h  GameWorld.cpp  GameWorld.h  GameplayScreen.cpp  GameplayScreen.h  MenuScreen.cpp  TypeMap.h  menuscreen.h  screen.h
Game/Components/: Component.h  DrawComponent.cpp  PathfindComponent.h  TransformComponent.cpp  drawcomponent.h  pathfindcomponent.cpp  playercontrolcomponent.cpp  playercontrolcomponent.h  transformcomponent.h
Game/Components/CollisionComponents/: BoundingDynamicMesh.cpp  BoundingDynamicMesh.h  BoundingEllipsoid.h  BoundingShape.cpp  BoundingShape.h  BoundingTriangle.cpp  CollisionComponent.cpp  CylinderCollider.cpp  CylinderCollider.h  boundingellipsoid.cpp  boundingtriangle.h  collisioncomponent.h
Game/Environment/: Environment.cpp  Environment.h  environmentsystem.cpp  environmentsystem.h  grassenvironment.cpp  grassenvironment.h  skyboxenvironment.cpp  skyboxenvironment.h  water.cpp  water.h
Game/GameObjects/: GameObject.cpp  GameObject.h
Game/Systems/: aisystem.cpp  aisystem.h  camerasystem.cpp  camerasystem.h  charactercontrollersystem.cpp  charactercontrollersystem.h  drawsystem.cpp  drawsystem.h  objectcreationsystem.cpp  objectcreationsystem.h  physicssystem.cpp  physicssystem.h  system.h
Game/Systems/AI/: aibehaviorcomponent.cpp  aibehaviorcomponent.h  btnode.cpp  btnode.h  btselector.cpp  btselector.h  btsequence.cpp  btsequence.h
Game/Systems/AI/Actions/: btaction.cpp  btaction.h  walkaction.cpp  walkaction.h
Game/Systems/AI/Conditions/: btcondition.cpp  btcondition.h  proximitycondition.cpp  proximitycondition.h
Game/Systems/CollisionSystems/: accelerationsystem.cpp  accelerationsystem.h  collisionsystem.cpp  collisionsystem.h  ellipsoidtrianglecollisionsystem.cpp  ellipsoidtrianglecollisionsystem.h  environmentcollisiondetectionsystem.cpp  environmentcollisiondetectionsystem.h
Game/Systems/CollisionSystems/BVH/: bvhtree.cpp  bvhtree.h
Game/Systems/CollisionSystems/UniformGrid/: uniformgrid.cpp  uniformgrid.h
Game/Systems/Inventory/: inventoryitem.cpp  inventoryitem.h  inventorysystem.cpp  inventorysystem.h
Game/Systems/Pathfinding/: aimovementsystem.cpp  aimovementsystem.h  pathfinder.cpp  pathfinder.h
Game/Systems/UI/: uielement.cpp  uielement.h  uisystem.cpp  uisystem.h
Game/Systems/UI/ButtonAction/: buttonaction.cpp  buttonaction.h  showwindowaction.cpp  showwindowaction.h
Game/Systems/UI/UITextures/: UIButton.h  uibutton.cpp  uidisplay.cpp  uidisplay.h  uitexture.cpp  uitexture.h
Graphics/: camera.cpp  camera.h  global.h  graphics.cpp  graphics.h  modeltransform.cpp  modeltransform.h  shaderloader.h  shape.cpp  shape.h  textrenderer.cpp  textrenderer.h  tiny_obj_loader.h
Graphics/GLWrappers/: shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
Resources/Meshes/: grassfield_simple.mtl  howl_field_background.mtl  howl_field_water.mtl  meadow_ground.mtl  mouse2-3materials.mtl  mushroom_1.mtl
Resources/Shaders/: InventoryShader.frag  UIShader.frag  UIShader.vert  grass.frag  grass.vert  grassgeom.frag.autosave  grassgeom.geom  grassgeom.vert.autosave  phong.frag  phong.vert  skybox.frag  skybox.vert  water.frag  water.vert
